# springwebsite

./: .gitignore  CITATIONS.bib  LICENSE  README.md  manage.py
springeval/: admin.py  apps.py  forms.py  models.py  token.py  urls.py  views.py
springeval/management/commands/: check_file_delete.py  create_random.py  evaluation.py  flow_IO.py  flow_plot.py  update_evaluation.py
springeval/migrations/: 0001_initial.py  0002_resultentry_code_url_alter_springuser_description_and_more.py  0003_resultentry_robust_1px_d1_total_and_more.py  0004_robustcorruptionresult.py  0005_resultentry_evaluate_robustness.py  0006_alter_resultentry_evaluate_robustness.py  0007_alter_resultentry_evaluate_robustness.py
springeval/static/springeval/: style.css
springeval/templates/springeval/: base.html  detail.html  download.html  faq.html  index.html  opticalflow.html  resultentry_form.html  sceneflow.html  stereo.html  submit.html  userindex.html
springeval/templatetags/: na_filters.py
springwebsite/: asgi.py  settings.py  urls.py  wsgi.py
subsampling/: CMakeLists.txt  README.md  create_evalfiles.py  disp1_robust_subsampling.cpp  disp1_subsampling.cpp  disp2_robust_subsampling.cpp  disp2_subsampling.cpp  flow_robust_subsampling.cpp  flow_subsampling.cpp
templates/registration/: confirm_email.html  confirm_request.html  confirm_successful.html  logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
