cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(foo)
set(CMAKE_CXX_STANDARD 11)
set(USE_BOOST OFF CACHE BOOL "" FORCE)
set(HIGHFIVE_USE_HALF_FLOAT ON)
add_subdirectory(HighFive)
add_executable(flow_subsampling flow_subsampling.cpp)
add_executable(disp1_subsampling disp1_subsampling.cpp)
add_executable(disp2_subsampling disp2_subsampling.cpp)
target_link_libraries(flow_subsampling HighFive)
target_link_libraries(disp1_subsampling HighFive)
target_link_libraries(disp2_subsampling HighFive)
